Add ouath-token in swagger
